
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quiz-api"
description = "Quiz API"
authors = ["Lennard Beers <l.beers@outlook.de>"]
repository = "https://github.com/EuleMitKeule/quiz-api"
readme = "README.md"
packages = [{include = "quiz_api"}]
license = "MIT"
version = "0.0.0"

[tool.poetry.scripts]
api = "quiz_api.__main__:start"
drop = "quiz_api.db:drop_db"
generate-openapi = "quiz_api.__main__:generate_openapi"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlmodel = "^0.0.18"
pyjwt = "^2.8.0"
bcrypt = "^4.1.3"
alembic = "^1.13.2"

